--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0px;
 }
 body{
-    background-color: orange;
+    background-color: grey;
 }
 main{
     height: 100vh;
@@ -10,7 +10,6 @@ main{
     margin: 0 auto;
     /* background-color: aqua; */
 }
-
 
 .container1{
     margin-top: 10px;
@@ -25,11 +24,6 @@ main{
     position: relative;
     top: 45px;
 
-}
-#currentT{
-    color:black;
-    position: relative;
-    top: 50px;
 }
 
 
